--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title><SysInfoApp</title>
+		<title>How many animals have been killed this year?</title>
 		<link rel="stylesheet" href="./assets/styles/style.css"/>
 	</head>
 	<body>
